# buster

./: .dockerignore  .env.example  .gitignore  .pnpmrc  .release-please-config.json  CHANGELOG.md  CLAUDE.md  CLI_API_FIRST_REFACTORING.md  PNPM_MIGRATION.md  README.md  biome.json  biome2.json  docker-compose.yml  document_fixed.yml  mastra.db  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  scrap_reason_fixed.yml  tag_info.json  tsconfig.base.json  turbo.json  vitest.config.ts  vitest.workspace.ts
api/: Cargo.toml  Dockerfile
api/libs/agentsv2/: CLAUDE.md  Cargo.toml
api/libs/agentsv2/src/: lib.rs
api/libs/agentsv2/src/agents/: agent.rs
api/libs/agentsv2/src/tools/: mod.rs  tool.rs
api/libs/agentsv2/src/tools/planning_tools/: create_plan.rs  mod.rs
api/libs/agentsv2/src/tools/planning_tools/helpers/: mod.rs  todo_generator.rs
api/libs/agentsv2/tests/: integration_test.rs  integration_tests.rs
api/libs/agentsv2/tests/agents/: agent_integration_tests.rs  mod.rs
api/libs/litellm/: Cargo.toml
api/libs/litellm/src/: client.rs  lib.rs  types.rs
api/libs/litellm/tests/: integration-tests.rs
apps/api/libs/secrets/: Cargo.toml
apps/api/libs/secrets/src/: lib.rs
cli/: Cargo.toml
electric-server/: docker-compose.yml  makefile
scripts/: evals.sh  install-staging.sh  new-package.ts  sync-workspace-deps.js
server/: .dockerignore  .env.example  CLAUDE.md  DEVELOPMENT.md  Dockerfile  docker-compose.yml  makefile  package.json  test-docker.sh  tsconfig.json  vitest.config.ts
supabase/: .env.example
tasks/: package.json  tsconfig.json
trigger/: .gitignore  CLAUDE.md  package.json  trigger.config.ts  tsconfig.json  vitest.config.ts
web/: .envddd  .eslintrc.json  Dockerfile  biome.json  eslint.config.mjs  next.config.mjs  package-lock.json  (+4 more)
(+9816 files in other folders)
