[package]
name = "litellm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use workspace dependencies
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
reqwest = { workspace = true }
dotenv = { workspace = true }
once_cell = "1.19.0"
tracing = "0.1"
bytes = "1.5"


[dev-dependencies]
# Workspace inherited dev deps
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
anyhow = { workspace = true }
dotenv = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] } # Assuming reqwest is used in tests

# Lib-specific dev deps
futures-util = { workspace = true } # For stream utilities in tests
serial_test = "3.2.0" # Added for serializing env var tests


[features]
# ... existing code ... 