[package]
name = "secrets"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
infisical = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dotenv = { workspace = true }